--- a/css/style.css
+++ b/css/style.css
@@ -9,10 +9,6 @@ html {
     font-size: 10px;
 }
 
-body {
-    height: 100vh;
-}
-
 header {
     position: absolute;
     right: 30px;
@@ -46,8 +42,9 @@ main {
     height: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: center;
+    margin-top: 200px;
 }
 
 #search-bar {
@@ -61,13 +58,78 @@ main {
     margin-top: 20px;
 }
 
+#search-bar:hover {
+    box-shadow: 0 0 5px rgba(128, 128, 128, 0.363);
+}
+
 input[type="text"] {
     border: none;
+}
+
+#search-buttons {
+    margin-top: 30px;
+    width: 285px;
+    display: flex;
+    justify-content: space-between;
+}
+
+input[type="button"] {
+    border: 1px solid #f2f2f2;
+    color:  #5F6368;
+    height: 36px;
+    padding: 0 16px;
+    border-radius: 4px;
+    background-color: #f2f2f2;
+}
+
+input[type="button"]:hover {
+    background-image: -moz-linear-gradient(top,#f8f8f8,#f1f1f1);
+    color: #222;
+    border: 1px solid #c6c6c6;
+    box-shadow: 0 1px 1px rgba(0,0,0,0.1);
 }
 
 footer {
     position: absolute;
     bottom: 0;
-    height: 50px;
-    background-color: grey;
+    height: 81px;
+    width: 100%;
+    background-color: #f2f2f2;
+    color: #5f6368;
+}
+
+.fbar {
+    line-height: 39px;
+    border-top: 1px solid #dddddd;
+    padding-left: 27px;
+    font-size: 1.5rem;
+}
+
+.fbar:last-child {
+    font-size: 1.3rem;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.left {
+    width: 407px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.right {
+    margin-right: 20px;
+    width: 259px;
+    display: flex;
+    justify-content: space-between;
+}
+
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
+a:hover {
+    text-decoration: underline;
 }
